# balderich-py

./: .gitingore  README.md  setup.cfg  setup.py
balderich/: __init__.py  client.py
balderich/models/: team.py  user.py
balderich/utils/: code.py
src/balderich/: __init__.py
src/balderich/models/: contest.py  problem.py  resource.py  team.py  user.py
src/balderich/utils/: code.py  exceptions.py
