[metadata]
name = balderich
description = A Python library for the NSSCTF Balderich API
long_description_content_type = text/markdown
url = https://github.com/NSSCTF/balderich-py
project_urls =
    Bug Tracker = url = https://github.com/NSSCTF/balderich-py/issues
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
